css/style.css
/* ... */
html {
    scroll-behavior: smooth;
}

body {
    font-family: 'Inter', sans-serif;
    background: var(--background);
    color: var(--text-primary);
    cursor: url('/assets/images/pointer.png'), auto;
    line-height: 1.375;
}

.no-scroll-touch {
    pointer-events: none;
    overflow: hidden;
}

a:hover,
a:active {
    cursor: url('/assets/images/link.png'), pointer;
}

input, textarea {
    cursor: url('/assets/images/text.png'), text;
}

button {
    cursor: url('/assets/images/link.png'), pointer;
}

::selection {
    color: var(--background);
    background-color: var(--gold);
}

.gold-text {
    color: var(--gold);
}

.gold-gradient-text {
    background: -webkit-linear-gradient(0deg, #b18a52, #f1e8a4);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.button {
    font-size: 1rem;
    font-weight: 500;
    color: var(--gold);
    background: transparent;
    padding: .75rem 1.5rem;
    border: 1px solid rgba(255, 255, 255, .24);
    border-radius: 12px;
    text-decoration: none;
    transition: font-size .4s, padding .4s, margin .4s;
    backdrop-filter: blur(24px);
}

.paragraph i,
.paragraph h3,
.paragraph p,
.paragraph a {
    opacity: 0;
    filter: blur(3px);
    transform: translateX(-1rem);
    transition: all .7s, font-size .4s, padding .4s;
}

.paragraph.active i,
.paragraph.active h3,
.paragraph.active p,
.paragraph.active a {
    opacity: 1;
    filter: blur(0);
    transform: translateX(0);
}

.paragraph.active p {
    transition-delay: .2s;
}

.paragraph.active a {
    transition: all .7s .4s, font-size .4s 0s, padding .4s 0s;
}

/*----------------------------------------------------*/

.preloader {
    width: 100vw;
    height: 100vh;
    background: transparent;
    display: flex;
    align-items: center;
    justify-content: center;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 9999;
    opacity: 1;
    transition: opacity .25s;
    backdrop-filter: blur(48px);
}

.preloader .dot {
    background-color: var(--gold);
    height: 12px;
    width: 12px;
    border-radius: 50%;
    display: inline-block;
    margin: 0 3px;
    box-shadow: rgb(6, 6, 6) 1px 1px 5px -1px;
    animation: jump .8s infinite ease-in-out;
}

.preloader .dot.a {
    animation-delay: -0.6s;
}

.preloader .dot.b {
    animation-delay: -0.5s;
}

.preloader .dot.c {
    animation-delay: -0.4s;
}

.preloader .dot.d {
    animation-delay: -0.3s;
}

@keyframes jump {
    0%, 40%, 100% {
        transform: translateY(-12px);
    }
    20% {
        transform: translateY(-24px);
    }
}

.preloader-hide {
    opacity: 0;
}

nav {
    z-index: 99;
    width: 100%;
    height: 4.5rem;
    padding: 0 5%;
    position: fixed;
    top: 0;
    left: 0;
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-wrap: wrap;
    backdrop-filter: blur(24px);
}

nav .nav-l .logo {
    color: var(--text-primary);
    font-size: 1.5rem;
    font-weight: 500;
    letter-spacing: 2px;
    margin-right: 2rem;
    text-decoration: none;
}

nav .nav-l, nav .nav-l ul {
    display: flex;
    align-items: center;
}

nav .nav-l ul li {
    list-style: none;
}

nav .nav-l ul .nav-link a {
    color: var(--text-primary);
    font-size: 1rem;
    padding: .5rem 1rem;
    text-decoration: none;
    transition: color .3s;
}

nav .nav-l ul .nav-link a.active {
    color: var(--gold);
}

nav .nav-l .hamburger {
    display: none;
    position: absolute;
    top: 14px;
    right: 5%;
    cursor: url('/assets/images/link.png'), pointer;
    transition: transform .4s;
    z-index: 999;
}

nav .nav-l .hamburger.active {
    position: fixed;
    transform: rotate(45deg);
    pointer-events: all;
}

nav .nav-l .hamburger .line {
    fill: none;
    transition: stroke-dasharray .4s, stroke-dashoffset .4s;
    stroke: var(--text-primary);
    stroke-width: 5.5;
    stroke-linecap: round;
}

nav .nav-l .hamburger:nth-child(1) {
    stroke-dasharray: 40 121;
}

nav .nav-l .hamburger:nth-child(3) {
    stroke-dasharray: 40 121;
}

nav .nav-l .hamburger.active:nth-child(1) {
    stroke-dashoffset: -68px;
}

nav .nav-l .hamburger.active:nth-child(3) {
    stroke-dashoffset: -68px;
}

nav .nav-r {
    display: flex;
    justify-content: center;
    width: 9rem;
}

nav .nav-overlay {
    width: 100%;
    height: 100vh;
    position: fixed;
    top: 0;
    left: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background: rgba(0, 0, 0, .3);
    backdrop-filter: blur(48px);
    clip-path: circle(50px at 100% -20%);
    transition: clip-path 1s ease-out;
    pointer-events: none;
}

nav .nav-overlay.active {
    clip-path: circle(1000px at 80% -10%);
    pointer-events: all;
}

nav .nav-overlay .container {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
}

nav .nav-overlay .container .nav-link {
    color: var(--text-primary);
    font-size: 1.2rem;
    text-decoration: none;
    margin: 1.2rem 0;
}

nav .nav-overlay .container .nav-link i {
    font-size: 1.3rem;
    padding-right: .75rem;
}

.scroll-to-top {
    z-index: 99;
    position: fixed;
    bottom: 2rem;
    right: 2.5rem;
    font-size: 1.25rem;
    color: var(--gold);
    background: transparent;
    padding: .7rem .85rem;
    border: 1px solid rgba(255, 255, 255, .24);
    border-radius: 12px;
    opacity: 0;
    visibility: hidden;
    transition: all .3s;
    backdrop-filter: blur(24px);
}

.scroll-to-top-show {
    opacity: 1;
    visibility: visible;
}

/*----------------------------------------------------*/

#home {
    width: 100%;
    text-align: center;
    background-image: linear-gradient(transparent 74%, var(--background)), radial-gradient(circle, #282828, var(--background));
}

#home .light-wrapper {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    overflow: hidden;
    pointer-events: none;
}
/* ... */

